--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="course-col">
                 <div class="row">
-                    <div class="services-col">
+                    <div class="services-col2">
                         <img src="Assets/images/DSC_0407.JPG">
                             <div class="layer">
                                 <h3><a href="Assets\pdf\Vivek Resume.pdf" download>RESUME</a></h3>
