--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="services-col2">
                         <img src="Assets/images/DSC_0407.JPG">
-                            <div class="layer">
+                            <div class="layer1">
                                 <h3><a href="Assets\pdf\Vivek Resume.pdf" download>RESUME</a></h3>
                             </div>
                     </div>
