--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ion-icon class="fa" name="close-circle-outline" onclick="hideMenu()"></ion-icon>
                 <ul>
                     <li class="active"><a href="index.html" >Home</a></li>
-                    <li><a href="Assets\pdf\Vivek Resume.pdf" target="_blank">Resume</a></li>
+                    <li><a href="Assets\pdf\Vivek_Resume.pdf" target="_blank">Resume</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -53,7 +53,7 @@
                     <div class="services-col2">
                         <img src="Assets/images/DSC_0407.JPG">
                             <div class="layer1">
-                                <h3><a href="Assets\pdf\Vivek Resume.pdf" download>RESUME</a></h3>
+                                <h3><a href="Assets\pdf\Vivek_Resume.pdf" download>RESUME</a></h3>
                             </div>
                     </div>
                     <div class="picture">
