--- a/index.html
+++ b/index.html
@@ -46,19 +46,18 @@
     <!-----------course starts here------------>
     <section class="course" id="about">
         <h1>ABOUT ME</h1>
-        <p>I'm currently doing my Bachelors Degree in Computer Science and Engineering.</p>
         <div class="row">
             <div class="course-col">
                 <div class="row">
                     <div class="services-col2">
-                        <img src="Assets/images/DSC_0407.JPG">
+                        <img src="Assets/images/me.jpg">
                             <div class="layer1">
                                 <h3><a href="Assets\pdf\Vivek_Resume.pdf" download>RESUME</a></h3>
                             </div>
                     </div>
                     <div class="picture">
                         <p>Name : Vivek P P</p>
-                        <p>Email : vicu1122@gmail.com</p>
+                        <p>Email : vivekpadinjarote@gmail.com</p>
                         <p>Phone : 9497665933</p>
                     </div>
                 </div>
@@ -78,9 +77,14 @@
 
             <div class="course-col">
                 <h3>My Self</h3>
-                <p>Qui veniam do culpa elit proident officia labore non elit quis adipisicing sunt laboris. Eiusmod ex reprehenderit aliqua pariatur consectetur exercitation enim nulla. Velit deserunt ex cillum ut sint laboris.</p>
-                <p>Qui veniam do culpa elit proident officia labore non elit quis adipisicing sunt laboris. Eiusmod ex reprehenderit aliqua pariatur consectetur exercitation enim nulla. Velit deserunt ex cillum ut sint laboris.</p>
-                <p>Qui veniam do culpa elit proident officia labore non elit quis adipisicing sunt laboris. Eiusmod ex reprehenderit aliqua pariatur consectetur exercitation enim nulla. Velit deserunt ex cillum ut sint laboris.</p>
+                <p>Highly motivated and dedicated computer science 
+                    graduate seeking an entry-level position in the IT 
+                    industry. Eager to apply my technical skills and 
+                    knowledge gained through academic projects and coursework to contribute to a dynamic and 
+                    collaborative team.A team player committed to 
+                    delivering high-quality results and continuously 
+                    enhancing my skills to meet the evolving demands
+                    of the IT field.</p>
             </div>
         </div>
     </section>
